--- a/index.html
+++ b/index.html
@@ -9,38 +9,23 @@
 <body>
   <h1> Memory Game </h1>
       <div class="board">
-        <div class="row1">
-          <div class="cell1">x</div>
-          <div class="cell2">x</div>
-          <div class="cell3">x</div>
-          <div class="cell4">x</div>
-        </div>
-        <div class="row2">
-          <div class="cell5"></div>
-          <div class="cell6"></div>
-          <div class="cell7"></div>
-          <div class="cell8"></div>
-        </div>
-        <div class="row3">
-          <div class="cell9"></div>
-          <div class="cell10"></div>
-          <div class="cell11"></div>
-          <div class="cell12"></div>
-        </div>
-        <div class="row4">
-          <div class="cell13"></div>
-          <div class="cell14"></div>
-          <div class="cell15"></div>
-          <div class="cell16"></div>
-        </div>
-        <div class="row5">
-          <div class="cell17"></div>
-          <div class="cell18"></div>
-          <div class="cell19"></div>
-          <div class="cell20"></div>
-        </div>
+        <section>
+          <div class="row1">
+            <div class="cell1" id="cell"></div>
+            <div class="cell2" id="cell1"></div>
+            <div class="cell3"></div>
+            <div class="cell4"></div>
+          </div>
+          <div class="row2">
+            <div class="cell5"></div>
+            <div class="cell6"></div>
+            <div class="cell7"></div>
+            <div class="cell8"></div>
+          </div>
+        </section>
       </div>
   <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
+
   <script src="js/main.js"></script>
 </body>
 </html>
