--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       <div class="board">
         <section>
           <div class="row1">
-            <div class="cell1" id="cell"></div>
-            <div class="cell2" id="cell1"></div>
+            <div class="cell1"></div>
+            <div class="cell2"></div>
             <div class="cell3"></div>
             <div class="cell4"></div>
           </div>
@@ -22,10 +22,26 @@
             <div class="cell7"></div>
             <div class="cell8"></div>
           </div>
-        </section>
+          <div class="row3">
+            <div class="cell9"></div>
+            <div class="cell10"></div>
+            <div class="cell11"></div>
+            <div class="cell12"></div>
+          </div>
+          <div class="row4">
+            <div class="cell13"></div>
+            <div class="cell14"></div>
+            <div class="cell15"></div>
+            <div class="cell16"></div>
+          </div>
+          <div class="row5">
+            <div class="cell17"></div>
+            <div class="cell18"></div>
+            <div class="cell19"></div>
+            <div class="cell20"></div>
+          </div>
       </div>
   <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
-
   <script src="js/main.js"></script>
 </body>
 </html>
