make memory grid on html and css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-  <h1> Memory Game </h1>
+  <h1> Player 1 </h1>
       <div class="board">
         <section>
           <div class="row1">
