--- a/index.html
+++ b/index.html
@@ -11,34 +11,34 @@
       <div class="board">
         <section>
           <div class="row1">
-            <div class="cell1"></div>
-            <div class="cell2"></div>
-            <div class="cell3"></div>
-            <div class="cell4"></div>
+            <div class="cell" id="cell1"></div>
+            <div class="cell" id="cell2"></div>
+            <div class="cell" id="cell3"></div>
+            <div class="cell" id="cell4"></div>
           </div>
           <div class="row2">
-            <div class="cell5"></div>
-            <div class="cell6"></div>
-            <div class="cell7"></div>
-            <div class="cell8"></div>
+            <div class="cell" id="cell5"></div>
+            <div class="cell" id="cell6"></div>
+            <div class="cell" id="cell7"></div>
+            <div class="cell" id="cell8"></div>
           </div>
           <div class="row3">
-            <div class="cell9"></div>
-            <div class="cell10"></div>
-            <div class="cell11"></div>
-            <div class="cell12"></div>
+            <div class="cell" id="cell9"></div>
+            <div class="cell" id="cell10"></div>
+            <div class="cell" id="cell11"></div>
+            <div class="cell" id="cell12"></div>
           </div>
           <div class="row4">
-            <div class="cell13"></div>
-            <div class="cell14"></div>
-            <div class="cell15"></div>
-            <div class="cell16"></div>
+            <div class="cell" id="cell13"></div>
+            <div class="cell" id="cell14"></div>
+            <div class="cell" id="cell15"></div>
+            <div class="cell" id="cell16"></div>
           </div>
           <div class="row5">
-            <div class="cell17"></div>
-            <div class="cell18"></div>
-            <div class="cell19"></div>
-            <div class="cell20"></div>
+            <div class="cell" id="cell17"></div>
+            <div class="cell" id="cell18"></div>
+            <div class="cell" id="cell19"></div>
+            <div class="cell" id="cell20"></div>
           </div>
       </div>
   <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
