--- a/index.html
+++ b/index.html
@@ -8,34 +8,35 @@
   <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
 </head>
 <body>
+ <section>
   <h1> Player 1 </h1>
       <div class="board">
-            <div class="cell" id="cell1"></div>
-            <div class="cell" id="cell2"></div>
-            <div class="cell" id="cell3"></div>
-            <div class="cell" id="cell4"></div>
+            <div class="cell" id= ""> </div>
+            <div class="cell" id= ""> </div>
+            <div class="cell" id= ""> </div>
+            <div class="cell" id= ""> </div>
 
-            <div class="cell" id="cell5"></div>
-            <div class="cell" id="cell6"></div>
-            <div class="cell" id="cell7"></div>
-            <div class="cell" id="cell8"></div>
+            <div class="cell" id= ""> </div>
+            <div class="cell" id= ""> </div>
+            <div class="cell" id= ""> </div>
+            <div class="cell" id= ""> </div>
 
-            <div class="cell" id="cell9"></div>
-            <div class="cell" id="cell10"></div>
-            <div class="cell" id="cell11"></div>
-            <div class="cell" id="cell12"></div>
+            <div class="cell" id= ""> </div>
+            <div class="cell" id= ""> </div>
+            <div class="cell" id= ""> </div>
+            <div class="cell" id= ""> </div>
 
-            <div class="cell" id="cell13"></div>
-            <div class="cell" id="cell14"></div>
-            <div class="cell" id="cell15"></div>
-            <div class="cell" id="cell16"></div>
+            <div class="cell" id= ""> </div>
+            <div class="cell" id= ""> </div>
+            <div class="cell" id= ""> </div>
+            <div class="cell" id= ""> </div>
 
-            <div class="cell" id="cell17"></div>
-            <div class="cell" id="cell18"></div>
-            <div class="cell" id="cell19"></div>
-            <div class="cell" id="cell20"></div>
-
+            <div class="cell" id= ""> </div>
+            <div class="cell" id= ""> </div>
+            <div class="cell" id= ""> </div>
+            <div class="cell" id= ""> </div>
       </div>
+  </section>
   <script src="js/main.js"></script>
 </body>
 </html>
