change tile values into images, change background and theme

--- a/index.html
+++ b/index.html
@@ -4,39 +4,42 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Memory Game</title>
+  <link href='https://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="css/style.css">
   <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
 </head>
 <body>
- <section>
-  <h1> Player 1 </h1>
-      <div class="board">
-            <div class="cell" id= ""> </div>
-            <div class="cell" id= ""> </div>
-            <div class="cell" id= ""> </div>
-            <div class="cell" id= ""> </div>
+  <div class="top">
+    <h1>SPEED MEMORY</h1>
+  </div>
+      <section>
+        <div class="board">
+              <div class="cell"> </div>
+              <div class="cell"> </div>
+              <div class="cell"> </div>
+              <div class="cell"> </div>
 
-            <div class="cell" id= ""> </div>
-            <div class="cell" id= ""> </div>
-            <div class="cell" id= ""> </div>
-            <div class="cell" id= ""> </div>
+              <div class="cell"> </div>
+              <div class="cell"> </div>
+              <div class="cell"> </div>
+              <div class="cell"> </div>
 
-            <div class="cell" id= ""> </div>
-            <div class="cell" id= ""> </div>
-            <div class="cell" id= ""> </div>
-            <div class="cell" id= ""> </div>
+              <div class="cell"> </div>
+              <div class="cell"> </div>
+              <div class="cell"> </div>
+              <div class="cell"> </div>
 
-            <div class="cell" id= ""> </div>
-            <div class="cell" id= ""> </div>
-            <div class="cell" id= ""> </div>
-            <div class="cell" id= ""> </div>
+              <div class="cell"> </div>
+              <div class="cell"> </div>
+              <div class="cell"> </div>
+              <div class="cell"> </div>
 
-            <div class="cell" id= ""> </div>
-            <div class="cell" id= ""> </div>
-            <div class="cell" id= ""> </div>
-            <div class="cell" id= ""> </div>
-      </div>
-  </section>
+              <div class="cell"> </div>
+              <div class="cell"> </div>
+              <div class="cell"> </div>
+              <div class="cell"> </div>
+        </div>
+     </section>
   <script src="js/main.js"></script>
 </body>
 </html>
