--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
               <div class="cell"> </div>
         </div>
      </section>
+     <button type="reset" value="Play Again"></button>
   <script src="js/main.js"></script>
 </body>
 </html>
