add functioning start button

--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
               <div class="cell"> </div>
         </div>
      </section>
-     <button type="reset" value="Play Again"></button>
+     <button>Start</button>
+     <button type="reset">Play Again</button>
   <script src="js/main.js"></script>
 </body>
 </html>
