--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
   <div class="top">
     <h1>SPEED MEMORY</h1>
   </div>
+  <div id="clock"></div>
       <section>
         <div class="board">
-              <div class="cell"> </div>
+              <div class="cell" id="cell1"> </div>
               <div class="cell"> </div>
               <div class="cell"> </div>
               <div class="cell"> </div>
