--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
   <div class="top">
     <h1>SPEED MEMORY</h1>
   </div>
-  <div id="clock"></div>
       <section>
         <div class="board">
               <div class="cell" id="cell1"> </div>
@@ -41,8 +40,11 @@
               <div class="cell"> </div>
         </div>
      </section>
+        <div id="clock"></div>
+        <div id="result"></div>
      <button>Start</button>
      <button type="reset">Play Again</button>
+     <button>Pause</button>
   <script src="js/main.js"></script>
 </body>
 </html>
