--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
   <div class="top">
     <h1>SPEED MEMORY</h1>
   </div>
-      <section>
+    <section class="wholething">
+      <section class="section1">
         <div class="board">
               <div class="cell" id="cell1"> </div>
               <div class="cell"> </div>
@@ -40,8 +41,11 @@
               <div class="cell"> </div>
         </div>
      </section>
+     <div class="section2">
         <div id="clock"></div>
         <div id="result"></div>
+      </div>
+    </section>
      <button>Start</button>
      <button type="reset">Play Again</button>
      <button>Pause</button>
