--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Memory Game</title>
-  <link href='https://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="css/style.css">
+<link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,900' rel='stylesheet' type='text/css'>  <link rel="stylesheet" href="css/style.css">
   <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
 </head>
 <body>
   <div class="top">
-    <h1>SPEED MEMORY</h1>
+    <h1>Speed Memory</h1>
   </div>
     <section class="wholething">
       <section class="section1">
@@ -42,13 +41,16 @@
         </div>
      </section>
      <div class="section2">
-        <div id="clock"></div>
-        <div id="result"></div>
+        <div id="clock1"></div>
+        <div id="result1"></div>
       </div>
     </section>
-     <button>Start</button>
-     <button type="reset">Play Again</button>
-     <button>Pause</button>
+      <div class="section3">
+        <div id="clock2"></div>
+        <div id="result2"></div>
+      </div>
+     <button class="player1">Player1</button>
+     <button class="player2">Player2</button>
   <script src="js/main.js"></script>
 </body>
 </html>
