add pause button and make function for it

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
       </div>
      <button class="player1">Player1</button>
      <button class="player2">Player2</button>
+     <button class="pause">Pause</button>
   <script src="js/main.js"></script>
 </body>
 </html>
