fix positioning problems, add new div to show winner

--- a/index.html
+++ b/index.html
@@ -39,16 +39,20 @@
               <div class="cell"> </div>
               <div class="cell"> </div>
         </div>
-     </section>
+      </section>
+    <section class="rightside">
      <div class="section2">
         <div id="clock1"></div>
         <div id="result1"></div>
       </div>
-    </section>
       <div class="section3">
         <div id="clock2"></div>
         <div id="result2"></div>
       </div>
+      <div class="winner">
+      </div>
+    </section>
+    </section>
      <button class="player1">Player1</button>
      <button class="player2">Player2</button>
      <button class="pause">Pause</button>
