--- a/index.html
+++ b/index.html
@@ -42,15 +42,14 @@
       </section>
     <section class="rightside">
      <div class="section2">
-        <div id="clock1"></div>
+        <div id="clock1">Time:</div>
         <div id="result1"></div>
       </div>
       <div class="section3">
-        <div id="clock2"></div>
+        <div id="clock2">Time:</div>
         <div id="result2"></div>
       </div>
-      <div class="winner">
-      </div>
+      <div class="winner">Winner Is:</div>
     </section>
     </section>
      <button class="player1">Player1</button>
