--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Memory Game</title>
-<link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,900' rel='stylesheet' type='text/css'>  <link rel="stylesheet" href="css/style.css">
+  <link href='https://fonts.googleapis.com/css?family=Bangers' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Titillium+Web:400,900' rel='stylesheet' type='text/css'>  <link rel="stylesheet" href="css/style.css">
   <script src="https://code.jquery.com/jquery-2.2.0.min.js"></script>
 </head>
 <body>
@@ -42,14 +43,14 @@
       </section>
     <section class="rightside">
      <div class="section2">
-        <div id="clock1">Time:</div>
+        <div id="clock1">Time</div>
         <div id="result1"></div>
       </div>
       <div class="section3">
-        <div id="clock2">Time:</div>
+        <div id="clock2">Time</div>
         <div id="result2"></div>
       </div>
-      <div class="winner">Winner Is:</div>
+      <div class="winner">Winner</div>
     </section>
     </section>
      <button class="player1">Player1</button>
