make new player1 and player2 buttons

--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
         <div id="result2"></div>
       </div>
       <div class="winner">Winner</div>
+      <div class="p1button">Player 1 Button</div>
+      <div class="p2button">Player 2 Button</div>
     </section>
     </section>
-     <button class="player1">Player1</button>
-     <button class="player2">Player2</button>
      <button class="pause">Pause</button>
   <script src="js/main.js"></script>
 </body>
