fix board width, add functional restart button

--- a/index.html
+++ b/index.html
@@ -55,7 +55,8 @@
       <div class="p2button">Player 2 Button</div>
     </section>
     </section>
-     <button class="pause">Pause</button>
+       <button class="restart">Restart</button>
+       <button class="pause">Pause</button>
   <script src="js/main.js"></script>
 </body>
 </html>
