add new images and update README

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     </section>
     </section>
        <!-- <button class="playagain">Play Again?</button> -->
-       <button class="pause">Pause</button>
+       <!-- <button class="pause">Pause</button> -->
   <script src="js/main.js"></script>
 </body>
 </html>
