add new divs that hide and show

--- a/index.html
+++ b/index.html
@@ -57,8 +57,10 @@
       <div class="playagain">Play Again</div>
     </section>
     </section>
-       <!-- <button class="playagain">Play Again?</button> -->
-       <!-- <button class="pause">Pause</button> -->
+    <div class="hurry">Hurry Up!</div>
+    <div class="doneyet">Are you almost done?</div>
+    <div class="anydaynow">Any day now.</div>
+    <div class="practice">Keep practicing</div>
   <script src="js/main.js"></script>
 </body>
 </html>
